docs: update documentation to reflect current implementation
- Fix @JoinTable syntax to use Memris-style string properties
- Remove non-existent lifecycle/audit annotations from README
- Add Arena isolation pattern documentation
- Add all MemrisConfiguration builder options
- Add Boot 2 vs Boot 3 comparison sections
- Update examples to use public fields pattern
- Add composite index documentation
- Create new docs/design/indexes.md covering all index types
- Update ARCHITECTURE.md with current package structure
- Fix imports and package names throughout